# PENNE

./: .gitignore  README.md  requirements.txt  run.sh
penne_ecu/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
penne_ecu/include/: can.h  crypto.h  ecu.h  helpers.h
penne_ecu/src/: CMakeLists.txt  can.c  crypto.c  ecu.c  helpers.c  main.c
penne_ecu/test/: CMakeLists.txt  tests.c
penne_ecu/test/unity/: unity_fixture.h
pygame_gui/: .gitignore  Logger.py  attack_panel.py  attack_panel_elements.py  attacks.py  base_views.py  can_constants.py  car.py  constants.py  ecu.py  gui.py  gui_elements.py  main.py  setup_panel.py  setup_panel_views.py  simulator.py  sniffing_table.py
remote_car/: run.sh
remote_car/car/: Freenove_WS2812B_RGBLED_Controller.cpp  Freenove_WS2812B_RGBLED_Controller.h  car.ino
remote_car/include/: bluetooth.h  helper.h
remote_car/src/: bluetooth.c  helper.c  main.c
